@@ -13,6 +13,7 @@ Version 1.3.2+svn:
      the standard location filter provided inside the tag
  * Miscellaneous and bugfixes
    * 1.2 savegames are no longer compatible and thus not loaded
+   * fixed a crash if an invalid scenario was loaded (bug #9049)
 
 Version 1.3.2:
  * campaigns
